# SynCE

connector/etc/: Makefile.am  org.synce.dccm.Device.conf  org.synce.dccm.conf  org.synce.dccm.service.in  synce-connector.conf.in  synce-hal.conf.in
connector/scripts/: 85-synce.rules.in  Makefile.am  hal-synce-rndis.in  hal-synce-serial.in  synce-udev-rndis.in  synce.rules.in  synceconnector.py.in  udev-synce-rndis.in  udev-synce-serial.in
connector/src/: Makefile.am  hal-interface.xml  log.c  log.h  main-hal.c  main-udev.c  main.c  synce-connection-broker.c  synce-device-internal.h  synce-device-legacy.c  synce-device-legacy.h  synce-device-manager-control-signals-marshal.list  synce-device-manager-control.c  synce-device-manager.c  synce-device-manager.xml  synce-device-rndis.c  synce-device.c  synce-device.h  synce-errors.c  synce-errors.h  synce-serial-chat.c  synce-unlock-udev.py  utils.c  utils.h
connector/udev/: Makefile.am  synce-udev-rndis.in  synce-udev-serial.in
core/: ChangeLog  ChangeLog.connector  ChangeLog.librapi2  LICENSE  Makefile.am  README  README.connector  README.contributing  TODO  TODO.connector  configure.ac.in  libsynce.pc.in  rebuild.sh
core/bluetooth/: Makefile.am  README  hal-synce-bluetooth.in  synce-bt-peer  synce-hal-bt-ipdown.in  synce-hal-bt-ipup.in  synce-udev-bt-ipup.in
core/dccm/: Makefile.am  log.c  main-hal.c  main-udev.c  main.c  synce-connection-broker.c  synce-connection-broker.h  synce-device-internal.h  synce-device-legacy.c  synce-device-legacy.h  synce-device-manager-control.c  synce-device-manager-control.h  synce-device-manager-control.xml  synce-device-manager.c  synce-device-manager.h  synce-device-rndis.c  synce-device-rndis.h  synce-device.c  synce-device.h  synce-device.xml  synce-errors.c  synce-errors.h  synce-serial-chat.c  synce-unlock  utils.c  utils.h
core/docs/: Doxyfile.in
core/etc/: Makefile.am  dhclient.conf  org.freedesktop.Hal.Device.Synce.conf  org.synce.dccm.service.in
core/lib/: Makefile.am  architecture.md  bswap.c  datetype.c  errors.c  mainpage.md  synce_hash.c  synce_log.c
core/man/: Makefile.am  synce.7  synce_get_directory.3
core/python/: Makefile.am  constants.pxi  pyrapi2.pyx  types.pxi
core/script/: Makefile.am  synce-install-cab.in
core/scripts/: 10-synce.fdi  85-synce.rules.in  Makefile.am  hal-synce-rndis.in  hal-synce-serial.in  synce-serial.in  synce-udev-rndis.in  synce-udev-serial.in  synceconnector.py.in  udev-synce-rndis.in  udev-synce-serial.in
core/tests/: Makefile.am  test.conf
core/tools/: Makefile.am  oidinfo.c  pcommon.c  pcp.c  pkillall.c  pls.c  pmkdir.c  pmv.c  prm.c  prmdir.c  prun.c  psettime.c  pshortcut.c  pstatus.c  rapiconfig.c  synce-database.c  synce-install-cab.in  synce-list-programs.c  synce-registry.c  synce-remove-program.in
dccmd/: .cvsignore  Makefile.am  README  TODO  bootstrap  configure.ac  configure.ac.in  dccm.spec  dccm.spec.in  dccmd.spec
dccmd/debian/: README.Debian  changelog  control  copyright  files  rules
dccmd/m4/: libsynce.m4
dccmd/man/: Makefile.am  dccm.1  dccmd.1
dccmd/script/: .cvsignore  Makefile.am  synce-sound.1  synce-sound.in
dccmd/src/: .cvsignore  Makefile.am  daemon.c  dccm.c  dccmd.c
fur/: Changelog  Makefile.in  README.txt  bootstrap  cache.c  cache.h  common.c  config.status  configure  configure.ac  configure.ac.in  fur.c  fur_utils.c  fur_utils.h  macros.h  power.c  power.h  registry.c  registry.h  registry_utils.c  registry_utils.h  special.c  special.h  special_names.c  special_names.h
fur/docs/: FUR_old_page.html  and_who_are_you_anywayp.html  how_can_i_contact_youp.html  how_do_i_make_it_workp.html  main.html  template.html  what_does_it_needp.html  what_does_notp.html  what_does_work_nowp.html  what_it_doesp.html  what_it_isp.html  where_can_i_find_itp.html  who_contributedp.html  why_should_ip.html
gcemirror/screensnap/: Makefile.am  eventprocessor.h  huffmanencoder.cpp  screensnap.vcp  serversocket.h  snap.h
kde4-kcemirror/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.kde3  INSTALL  config.h.in
kde4-kcemirror/doc/: CMakeLists.txt
kde4-kcemirror/icons/: CMakeLists.txt
kde4-kcemirror/kcemirror/: CMakeLists.txt  cescreen.cpp  cescreen.h  decoder.cpp  decoder.h  huffmandecoder.h  imageviewer.cpp  imageviewer.h  kcemirror.cpp  rapiwrapper.cpp  rapiwrapper.h  xordecoder.h
kde4-kcemirror/po/: fr.gmo
kde4-kcemirror/screensnap/: CMakeLists.txt  encoder.cpp  rleencoder.h  serversocket.cpp  snap.cpp  vnckeymap.cpp  xorencoder.cpp  xorencoder.h
kde4-kio-rapip/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  NEWS.kio-rapip  README
kde4-kio-rapip/data/: CMakeLists.txt
kde4-kio-rapip/src/: CMakeLists.txt  rapip.cpp  rapip.h  rapip.protocol  synce.protocol
librapi2/: .cvsignore  BUGS  ChangeLog  Makefile.am  README  README.contributing  README.design  TODO  autogen.sh  bootstrap  configure.ac  configure.ac.in  configure.in  cvsclean  librapi2.pc.in  librapi2.spec  librapi2.spec.in  rebuild.sh
librapi2/debian/: changelog  control  copyright  docs  files  rules  (+1 more)
librra/: .cvsignore  ChangeLog  LICENSE  Makefile.am  README  bootstrap  configure.ac.in  librra.pc.in  rra.spec.in
librtfcomp/: CHANGELOG  Makefile.am  aclocal.m4  autogen.sh  bootstrap  configure.in
libsynce/: .cvsignore  ChangeLog  LICENSE  Makefile.am  README  TODO  autogen.sh  configure.ac  configure.ac.in  cvsclean  libsynce.m4  libsynce.spec  libsynce.spec.in  rebuild.sh
odccm/: ChangeLog  Makefile.am  README  autogen.sh  configure.ac
pyrra/: CHANGELOG  TODO  configure.in
synce/: .cvsignore  AUTHORS  Makefile.am  README  SynCE.kdevelop  TODO  config.h.bot  configure.in.in  little_endian.h  subdirs  synce.lsm
synical/: .cvsignore  Makefile.am  README  buildconf  configure  configure.in  cvsclean
trayicon/: .cvsignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  autogen.sh  bootstrap  configure.ac  configure.ac.in  trayicon.spec  trayicon.spec.in
usb-rndis-ng/: README  configure.ac
vdccm/: AUTHORS  ChangeLog  Makefile.am  Makefile.cvs  NEWS  README  TODO  acinclude.m4  configure.ac
(+2504 files in other folders)
