dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.53)
AC_INIT(pyrra, 0.1)
AM_INIT_AUTOMAKE([1.9 foreign])


dnl Libtool.
AM_PROG_LIBTOOL

dnl Check for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Check for libraries.
PKG_CHECK_MODULES(LIBRRA, librapi2 >= 0.9.1)

dnl Check for header files.
AC_STDC_HEADERS

dnl Check for python and pyrex.
required_python_version=2.4
AM_PATH_PYTHON()

if test -z "$PYTHON"; then
    AC_MSG_ERROR([Python not found])
fi

AC_MSG_CHECKING([whether $PYTHON version >= $required_python_version])
AM_PYTHON_CHECK_VERSION([$PYTHON], [$required_python_version],
                      [AC_MSG_NOTICE([ok])],
                      [AC_MSG_ERROR([too old])])

AC_CHECK_PROGS(PYREX, pyrexc)
if test -z "$PYREX"; then
    AC_MSG_ERROR([Pyrex not found])
fi

AM_CHECK_PYTHON_HEADERS(AC_MSG_NOTICE([found]), AC_MSG_ERROR([not found]))

AC_OUTPUT([Makefile src/Makefile])
