# Process this file with autoconf to produce a configure script.
AC_INIT(src/db2ical.cpp)
AC_CANONICAL_SYSTEM
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(synical, 0.1)

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
LD_FLAGS="-L/usr/local/lib $LD_FLAGS"

## librapi and friends
AC_CHECK_LIB(wine,main,,[AC_MSG_ERROR([libwine not found])])
AC_CHECK_LIB(chunk,main,,[AC_MSG_ERROR([libchunk not found])])
AC_CHECK_LIB(rapi,CeRapiInit,,[AC_MSG_ERROR([librapi not found])])

## libical
AC_CHECK_LIB(ical,icalcomponent_new,,[AC_MSG_ERROR([libical not found])])
AC_CHECK_LIB(icalss,icalset_new_file,,[AC_MSG_ERROR([libicalss not found])])

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h malloc.h sys/param.h wchar.h])
AC_CHECK_HEADER(rapi.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
dnl AC_FUNC_MALLOC
AC_HEADER_STDC
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([memset])

dnl AC_CONFIG_FILES([])
AC_OUTPUT(Makefile src/Makefile)

